--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,9 +1,1 @@
-{
-  "version": 2,
-  "builds": [
-    { "src": "Backend/index.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/.*", "dest": "Backend/index.js" }
-  ]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/Backend" }] }
