--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node Backend/index.js", 
-    "server": "nodemon Backend/index.js"
+   "start": "node Backend/index.js",
+    "server": "nodemon Backend/index.js",
+    "build": "echo \"No build step defined yet\""
   },
   "keywords": [],
   "author": "",
