--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "build": "echo \"No build step defined yet\""
   },
   "keywords": [],
   "author": "",
@@ -15,8 +16,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body": "^5.1.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "node": "^20.18.1",
     "nodemon": "^3.1.7",
     "parser": "^0.1.4",
     "passport": "^0.7.0",
