--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "Backend/index.js", "use": "@vercel/node" }
+    {
+      "src": "Backend/index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/" }
+    {
+      "src": "/(.*)",
+      "dest": "Backend/index.js"
+    }
   ]
 }
