--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,14 +2,16 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
+      "src": "Backend/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "Backend/index.js"
     }
   ]
+}
+
 }
