--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,1 +1,15 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/Backend" }] }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "./Backend/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
+}
