--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "body": "^5.1.0",
     "body-parser": "^1.20.3",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -25,6 +26,7 @@
     "parser": "^0.1.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "pg-promise": "^11.10.2"
   }
 }
