--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "server": "nodemon index.js"
+    "start": "node main.js",
+    "server": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
