--- a/Fronted/.gitignore
+++ b/Fronted/.gitignore
@@ -7,12 +7,14 @@
 
 # testinggit
 /coverage
-
+/Backend/node_modules
 # production
 /build
 
 # misc
 .DS_Store
+.env
+/Backend/.env
 .env.local
 .env.development.local
 .env.test.local
