--- a/Fronted/package.json
+++ b/Fronted/package.json
@@ -1,7 +1,6 @@
 {
   "name": "usepopcorn",
   "proxy": "http://localhost:8080",
-
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "node": "^18.20.5",
     "react": "^18.3.1",
