--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
-    "pg-promise": "^11.10.2"
+    "pg-promise": "^11.10.2",
+    "postgres": "^3.4.5"
   }
 }
