--- a/Fronted/package.json
+++ b/Fronted/package.json
@@ -1,6 +1,6 @@
 {
   "name": "usepopcorn",
-  "proxy": "http://localhost:8080",
+  "proxy": "https://fusionfilm-backend.onrender.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
